<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="16dp"
        android:text="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/bg"
        android:layout_width="464dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_bg"
        android:src="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/mask"
        android:layout_width="692dp"
        android:layout_height="297dp"
        android:layout_marginLeft="-3330dp"
        android:background="@drawable/ic_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/orig"
        android:layout_width="530dp"
        android:layout_height="305dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-30dp"
        android:background="@drawable/orig"
        android:layout_marginTop="-24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="226dp"
        android:layout_marginBottom="528dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

    <TextView
        android:id="@+id/name"
        android:layout_width="345dp"
        android:layout_height="115dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="290dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/name"
        android:textAppearance="@style/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="343dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="392dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/tag"
        android:textAppearance="@style/tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Star"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_star_icon"
        app:layout_constraintStart_toStartOf="@+id/tag"
        app:layout_constraintTop_toBottomOf="@+id/tag" />

    <ImageView
        android:id="@+id/Star2"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@+id/Star"
        app:layout_constraintTop_toTopOf="@+id/Star" />

    <ImageView
        android:id="@+id/Star3"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@+id/Star2"
        app:layout_constraintTop_toTopOf="@+id/Star2" />

    <ImageView
        android:id="@+id/Star4"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/ic_star_icon"
        app:layout_constraintStart_toEndOf="@+id/Star3"
        app:layout_constraintTop_toTopOf="@+id/Star3" />

    <ImageView
        android:id="@+id/Star5"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/ic_star_icon_black"
        app:layout_constraintStart_toEndOf="@+id/Star4"
        app:layout_constraintTop_toTopOf="@+id/Star4" />


    <ImageView
        android:id="@+id/Rewiew"
        android:layout_width="112dp"
        android:layout_height="13dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/ic_name"
        app:layout_constraintStart_toEndOf="@+id/Star5"
        app:layout_constraintTop_toTopOf="@+id/Star5" />

    <TextView
        android:id="@+id/story_life"
        android:layout_width="389dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/name2"
        android:textAppearance="@style/name2"
        app:layout_constraintStart_toStartOf="@+id/Star"
        app:layout_constraintTop_toBottomOf="@+id/Star" />

    <TextView
        android:id="@+id/after_the_d"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:text="@string/after_the_d"
        android:textAppearance="@style/after_the_d"
        app:layout_constraintStart_toStartOf="@+id/story_life"
        app:layout_constraintTop_toBottomOf="@+id/story_life" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="343dp"
        android:layout_height="24dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/heading"
        android:textAppearance="@style/heading"
        app:layout_constraintStart_toStartOf="@+id/after_the_d"
        app:layout_constraintTop_toBottomOf="@+id/after_the_d" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/movienum1"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/movienum2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/movienum3"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/movie"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/robert_down"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/robert_down"
        android:textAppearance="@style/robert_down"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/chris_evans"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/chris_evans"
        android:textAppearance="@style/robert_down"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/mark_ruffalo"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/mark_ruffalo"
        android:textAppearance="@style/robert_down"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/chris_hemsworth"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/chris_hemsworth"
        android:textAppearance="@style/robert_down"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />


</androidx.constraintlayout.widget.ConstraintLayout>